# cosfs

./: .cruft.json  CONTRIBUTING.rst  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
docs/: index.md
src/cosfs/: __init__.py  base.py  core.py  file.py  utils.py
