[metadata]
description = fsspec filesystem for COS
name = cosfs
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache-2.0
license_file = LICENSE
url = https://github.com/idling11/cosfs
platforms=any
authors = Hanmiao Li
maintainer_email = hanmiao.li@clickzetta.com
download_url= https://github.com/idling11/cosfs
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 4 - Beta


[options]
python_requires = >=3.8
zip_safe = False
package_dir=
    =src
packages = find:
install_requires=
    fsspec>=2023.9.2
    cos-python-sdk-v5>=1.9.25

[options.extras_require]
tests =
    pytest==7.2.0
    pytest-sugar==0.9.5
    pytest-cov==3.0.0
    pytest-mock==3.8.2
    pylint==2.15.0
    pylint-pytest==1.1.7
    mypy==0.971
    requests==2.31.0
    cos-python-sdk-v5==1.9.25
dev =
    %(tests)s

[options.packages.find]
exclude =
    tests
    tests.*
where=src

[flake8]
ignore=
    # Whitespace before ':'
    E203
    # Too many leading '#' for block comment
    E266
    # Line break occurred before a binary operator
    W503
    # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
    P1
max_line_length = 88
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true
